--- a/package.json
+++ b/package.json
@@ -11,13 +11,18 @@
   },
   "dependencies": {
     "@capacitor/app": "1.0.1",
+    "@capacitor/camera": "^1.0.1",
     "@capacitor/core": "3.0.1",
+    "@capacitor/filesystem": "^1.0.1",
     "@capacitor/haptics": "1.0.1",
     "@capacitor/keyboard": "1.0.1",
     "@capacitor/status-bar": "1.0.1",
+    "@capacitor/storage": "^1.0.1",
+    "@ionic/pwa-elements": "^3.0.2",
     "@ionic/vue": "^5.4.0",
     "@ionic/vue-router": "^5.4.0",
     "core-js": "^3.6.5",
+    "firebase": "^8.6.8",
     "vue": "^3.0.0-0",
     "vue-router": "^4.0.0-0"
   },
