--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@capacitor/app": "1.0.1",
     "@capacitor/camera": "^1.0.1",
-    "@capacitor/core": "3.0.1",
+    "@capacitor/core": "^3.0.1",
     "@capacitor/filesystem": "^1.0.1",
     "@capacitor/haptics": "1.0.1",
+    "@capacitor/ios": "^3.1.2",
     "@capacitor/keyboard": "1.0.1",
+    "@capacitor/local-notifications": "^1.0.3",
     "@capacitor/status-bar": "1.0.1",
     "@capacitor/storage": "^1.0.1",
     "@ionic/pwa-elements": "^3.0.2",
@@ -27,7 +29,7 @@
     "vue-router": "^4.0.0-0"
   },
   "devDependencies": {
-    "@capacitor/cli": "3.0.1",
+    "@capacitor/cli": "^3.0.1",
     "@types/jest": "^24.0.19",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
