Date format changed

--- a/ios/App/App/capacitor.config.json
+++ b/ios/App/App/capacitor.config.json
@@ -1,6 +1,6 @@
 {
-	"appId": "io.ionic.starter",
+	"appId": "be.workandmeet.app",
 	"appName": "app-workandmeet",
-	"webDir": "public",
+	"webDir": "dist",
 	"bundledWebRuntime": false
 }
