--- a/ios/App/App/Info.plist
+++ b/ios/App/App/Info.plist
@@ -2,10 +2,18 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>LSApplicationCategoryType</key>
+	<string></string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Use camera</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>Use camera</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Use camera</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-        <string>app-workandmeet</string>
+	<string>app-workandmeet</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
